crates/weaveffi-cli/tests/snapshots/go_shapes__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# shapes (Go)

cgo bindings for the `shapes` native library.

## Build

The module ships its own copy of the C header (`shapes.h`) and links with
`-lshapes`. Point the linker at the directory holding `libshapes.so`,
`libshapes.dylib`, or `shapes.dll`, and make the library findable at
run time:

```sh
export CGO_LDFLAGS="-L/path/to/lib"
export LD_LIBRARY_PATH="/path/to/lib"   # DYLD_LIBRARY_PATH on macOS
go build ./...
```

Depend on the module from your own project with a `require` (and, for a
local checkout, a `replace`) of `shapes`, then import it:

```go
import "shapes"
```

Go 1.23 or newer is required.

## Usage notes

- Records are plain structs and rich enums are sealed interfaces; both cross
  the boundary by value.
- Interfaces are reference-counted objects. Call `Close` when you're done
  with one (a finalizer releases it otherwise); it's safe to call twice or
  while a call is in flight.
- Async functions take a `context.Context` first. Cancellable ones cancel
  the native call when the context is done.
- Callback interfaces are Go interfaces you implement. The library may call
  them from any thread, and a panic is reported to the native caller as a
  foreign error instead of crashing.
- Loading checks the library's ABI revision and contract checksums and
  panics with the stale module's name on a mismatch.

<!-- END README.md -->
