crates/weaveffi-cli/tests/snapshots/go_shapes__bindings_go.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

package shapes

/*
#cgo LDFLAGS: -lshapes
#include "shapes.h"
*/
import "C"

func init() {
	wvCheckABI()
	wvCheckModule("shapes", 0x06acf433ffa2a0f0, uint64(C.shapes_shapes_checksum()))
}

// Shape: An algebraic shape (sum type with associated data)
//
// Shape is a sealed sum type: exactly one of its variant structs is the
// value at a time.
type Shape interface {
	isShape()
}

// ShapeEmpty: The empty shape (a unit variant)
type ShapeEmpty struct{}

func (ShapeEmpty) isShape() {}

// ShapeCircle: A circle with a radius
type ShapeCircle struct {
	// Radius: Radius in points
	Radius float64
}

func (ShapeCircle) isShape() {}

// ShapeRectangle: An axis-aligned rectangle
type ShapeRectangle struct {
	Width  float32
	Height float32
}

func (ShapeRectangle) isShape() {}

// ShapeBounded: An integer-bounded shape (exercises narrow + wide ints)
type ShapeBounded struct {
	Min    int16
	Max    int16
	Weight uint64
}

func (ShapeBounded) isShape() {}

// ShapeLabeled: A labeled shape with a small count
type ShapeLabeled struct {
	Label string
	Count uint8
}

func (ShapeLabeled) isShape() {}

// wvPackShape appends v to w in the value-buffer wire format.
func wvPackShape(w *wvWriter, v Shape) {
	switch x := v.(type) {
	case ShapeEmpty:
		w.writeI32(0)
	case ShapeCircle:
		w.writeI32(1)
		w.writeF64(x.Radius)
	case ShapeRectangle:
		w.writeI32(2)
		w.writeF32(x.Width)
		w.writeF32(x.Height)
	case ShapeBounded:
		w.writeI32(3)
		w.writeI16(x.Min)
		w.writeI16(x.Max)
		w.writeU64(x.Weight)
	case ShapeLabeled:
		w.writeI32(4)
		w.writeString(x.Label)
		w.writeU8(x.Count)
	default:
		panic("shapes: Shape value is not one of its variants")
	}
}

// wvUnpackShape decodes one Shape from r.
func wvUnpackShape(r *wvReader) Shape {
	switch r.readI32() {
	case 0:
		return ShapeEmpty{}
	case 1:
		var x ShapeCircle
		x.Radius = r.readF64()
		return x
	case 2:
		var x ShapeRectangle
		x.Width = r.readF32()
		x.Height = r.readF32()
		return x
	case 3:
		var x ShapeBounded
		x.Min = r.readI16()
		x.Max = r.readI16()
		x.Weight = r.readU64()
		return x
	case 4:
		var x ShapeLabeled
		x.Label = r.readString()
		x.Count = r.readU8()
		return x
	default:
		panic("shapes: malformed value buffer: Shape tag out of range")
	}
}

// Channel: A plain C-style enum (no payloads)
type Channel int32

const (
	ChannelRed   Channel = 0
	ChannelGreen Channel = 1
	ChannelBlue  Channel = 2
)

// Numerics: One field per supported numeric primitive
type Numerics struct {
	A int8
	B int16
	C int32
	D int64
	E uint8
	F uint16
	G uint32
	H uint64
	I float32
	J float64
}

// wvPackNumerics appends v to w in the value-buffer wire format.
func wvPackNumerics(w *wvWriter, v Numerics) {
	w.writeI8(v.A)
	w.writeI16(v.B)
	w.writeI32(v.C)
	w.writeI64(v.D)
	w.writeU8(v.E)
	w.writeU16(v.F)
	w.writeU32(v.G)
	w.writeU64(v.H)
	w.writeF32(v.I)
	w.writeF64(v.J)
}

// wvUnpackNumerics decodes one Numerics from r.
func wvUnpackNumerics(r *wvReader) Numerics {
	var v Numerics
	v.A = r.readI8()
	v.B = r.readI16()
	v.C = r.readI32()
	v.D = r.readI64()
	v.E = r.readU8()
	v.F = r.readU16()
	v.G = r.readU32()
	v.H = r.readU64()
	v.I = r.readF32()
	v.J = r.readF64()
	return v
}

// Describe: Render a shape to a string
func Describe(shape Shape) string {
	wShape := &wvWriter{}
	wvPackShape(wShape, shape)
	cShapePtr, cShapeLen := wvBytes(wShape.buf)
	var cRetLen C.size_t
	var cErr C.shapes_error
	cRet := C.shapes_shapes_describe(cShapePtr, cShapeLen, &cRetLen, &cErr)
	wvTrap(&cErr)
	return wvTakeString(cRet, cRetLen)
}

// Scale: Scale a shape by a factor, returning a new shape
func Scale(shape Shape, factor float64) Shape {
	wShape := &wvWriter{}
	wvPackShape(wShape, shape)
	cShapePtr, cShapeLen := wvBytes(wShape.buf)
	var cRetLen C.size_t
	var cErr C.shapes_error
	cRet := C.shapes_shapes_scale(cShapePtr, cShapeLen, C.double(factor), &cRetLen, &cErr)
	wvTrap(&cErr)
	rRet := &wvReader{buf: wvTakeBytes(cRet, cRetLen)}
	var ret Shape
	ret = wvUnpackShape(rRet)
	rRet.expectEnd()
	return ret
}

// SumBytes: Sum a list of bytes into a wide integer (numerics smoke)
func SumBytes(values []byte) uint64 {
	cValuesPtr, cValuesLen := wvBytes(values)
	var cErr C.shapes_error
	cRet := C.shapes_shapes_sum_bytes(cValuesPtr, cValuesLen, &cErr)
	wvTrap(&cErr)
	return uint64(cRet)
}

// MakeNumerics: Build a Numerics struct from every numeric primitive
func MakeNumerics(a int8, b int16, c int32, d int64, e uint8, f uint16, g uint32, h uint64, i float32, j float64) Numerics {
	var cRetLen C.size_t
	var cErr C.shapes_error
	cRet := C.shapes_shapes_make_numerics(C.int8_t(a), C.int16_t(b), C.int32_t(c), C.int64_t(d), C.uint8_t(e), C.uint16_t(f), C.uint32_t(g), C.uint64_t(h), C.float(i), C.double(j), &cRetLen, &cErr)
	wvTrap(&cErr)
	rRet := &wvReader{buf: wvTakeBytes(cRet, cRetLen)}
	var ret Numerics
	ret = wvUnpackNumerics(rRet)
	rRet.expectEnd()
	return ret
}

// END bindings.go
