crates/weaveffi-cli/tests/snapshots/go_shapes__go_mod.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

module shapes

go 1.23

// END go.mod
