crates/weaveffi-cli/tests/snapshots/go_shapes__weaveffi_go.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

package weaveffi

/*
#cgo LDFLAGS: -lweaveffi
#include "weaveffi.h"
#include <stdlib.h>
*/
import "C"

import (
	"encoding/binary"
	"fmt"
	"math"
	"unicode/utf8"
	"unsafe"
)

// WeaveFFIError reports a failure crossing the C boundary that no typed
// error domain claims: an unknown code, a marshalling failure, or a
// producer panic.
type WeaveFFIError struct {
	// Code is the numeric ABI error code.
	Code int32
	// Message is the human-readable error message.
	Message string
}

func (e *WeaveFFIError) Error() string {
	return fmt.Sprintf("weaveffi: %s (code %d)", e.Message, e.Code)
}

// wvTakeError reads and clears a non-zero C error slot, returning its
// code, message, and a copy of its structured payload buffer (nil when
// the code declares no payload fields).
func wvTakeError(cErr *C.weaveffi_error) (int32, string, []byte) {
	code := int32(cErr.code)
	msg := ""
	if cErr.message != nil {
		msg = C.GoString(cErr.message)
	}
	var payload []byte
	if cErr.payload_ptr != nil {
		payload = C.GoBytes(unsafe.Pointer(cErr.payload_ptr), C.int(cErr.payload_len))
	}
	C.weaveffi_error_clear(cErr)
	return code, msg, payload
}

func wvBrandError(code int32, message string, _ []byte) error {
	return &WeaveFFIError{Code: code, Message: message}
}

// wvTrap panics when the C error slot reports a failure. Non-throwing
// wrappers check their slot with it: a non-zero code there can only be
// a producer panic or a marshalling failure.
func wvTrap(cErr *C.weaveffi_error) {
	if cErr.code != 0 {
		code, msg, _ := wvTakeError(cErr)
		panic(fmt.Sprintf("weaveffi: %s (code %d)", msg, code))
	}
}

// wvWriter serializes values into the WeaveFFI value-buffer format:
// little-endian, packed, u32 length prefixes.
type wvWriter struct {
	buf []byte
}

func (w *wvWriter) writeBool(v bool) {
	if v {
		w.buf = append(w.buf, 1)
	} else {
		w.buf = append(w.buf, 0)
	}
}

func (w *wvWriter) writeI8(v int8) {
	w.buf = append(w.buf, byte(v))
}

func (w *wvWriter) writeU8(v uint8) {
	w.buf = append(w.buf, v)
}

func (w *wvWriter) writeI16(v int16) {
	w.buf = binary.LittleEndian.AppendUint16(w.buf, uint16(v))
}

func (w *wvWriter) writeU16(v uint16) {
	w.buf = binary.LittleEndian.AppendUint16(w.buf, v)
}

func (w *wvWriter) writeI32(v int32) {
	w.buf = binary.LittleEndian.AppendUint32(w.buf, uint32(v))
}

func (w *wvWriter) writeU32(v uint32) {
	w.buf = binary.LittleEndian.AppendUint32(w.buf, v)
}

func (w *wvWriter) writeI64(v int64) {
	w.buf = binary.LittleEndian.AppendUint64(w.buf, uint64(v))
}

func (w *wvWriter) writeU64(v uint64) {
	w.buf = binary.LittleEndian.AppendUint64(w.buf, v)
}

func (w *wvWriter) writeF32(v float32) {
	w.writeU32(math.Float32bits(v))
}

func (w *wvWriter) writeF64(v float64) {
	w.writeU64(math.Float64bits(v))
}

func (w *wvWriter) writeLen(n int) {
	if n < 0 || uint64(n) > uint64(^uint32(0)) {
		panic("weaveffi: value-buffer length exceeds u32 range")
	}
	w.writeU32(uint32(n))
}

func (w *wvWriter) writeString(v string) {
	w.writeLen(len(v))
	w.buf = append(w.buf, v...)
}

func (w *wvWriter) writeBytes(v []byte) {
	w.writeLen(len(v))
	w.buf = append(w.buf, v...)
}

func (w *wvWriter) writeOptionFlag(present bool) {
	w.writeBool(present)
}

// wvReader decodes values from the WeaveFFI value-buffer format. A
// malformed buffer is a producer/consumer contract violation, so every
// read panics (the same channel a trapped producer error uses) instead
// of returning a typed domain error.
type wvReader struct {
	buf []byte
	pos int
}

func wvMalformed(context string) {
	panic("weaveffi: malformed value buffer: " + context)
}

func (r *wvReader) take(n int, context string) []byte {
	if n < 0 || len(r.buf)-r.pos < n {
		wvMalformed(context)
	}
	b := r.buf[r.pos : r.pos+n]
	r.pos += n
	return b
}

func (r *wvReader) readBool() bool {
	switch r.take(1, "bool")[0] {
	case 0:
		return false
	case 1:
		return true
	}
	wvMalformed("bool byte out of range")
	return false
}

func (r *wvReader) readI8() int8 {
	return int8(r.take(1, "i8")[0])
}

func (r *wvReader) readU8() uint8 {
	return r.take(1, "u8")[0]
}

func (r *wvReader) readI16() int16 {
	return int16(binary.LittleEndian.Uint16(r.take(2, "i16")))
}

func (r *wvReader) readU16() uint16 {
	return binary.LittleEndian.Uint16(r.take(2, "u16"))
}

func (r *wvReader) readI32() int32 {
	return int32(binary.LittleEndian.Uint32(r.take(4, "i32")))
}

func (r *wvReader) readU32() uint32 {
	return binary.LittleEndian.Uint32(r.take(4, "u32"))
}

func (r *wvReader) readI64() int64 {
	return int64(binary.LittleEndian.Uint64(r.take(8, "i64")))
}

func (r *wvReader) readU64() uint64 {
	return binary.LittleEndian.Uint64(r.take(8, "u64"))
}

func (r *wvReader) readF32() float32 {
	return math.Float32frombits(r.readU32())
}

func (r *wvReader) readF64() float64 {
	return math.Float64frombits(r.readU64())
}

func (r *wvReader) readLen() int {
	n := int(r.readU32())
	if n > len(r.buf)-r.pos {
		wvMalformed("length prefix exceeds remaining buffer")
	}
	return n
}

func (r *wvReader) readString() string {
	b := r.take(r.readLen(), "string bytes")
	if !utf8.Valid(b) {
		wvMalformed("string is not valid UTF-8")
	}
	return string(b)
}

func (r *wvReader) readBytes() []byte {
	b := r.take(r.readLen(), "byte buffer")
	out := make([]byte, len(b))
	copy(out, b)
	return out
}

func (r *wvReader) readOptionFlag() bool {
	switch r.take(1, "option flag")[0] {
	case 0:
		return false
	case 1:
		return true
	}
	wvMalformed("option flag byte out of range")
	return false
}

func (r *wvReader) expectEnd() {
	if r.pos != len(r.buf) {
		wvMalformed("trailing bytes after value")
	}
}

// wvCopyBuffer copies an owned, producer-allocated value buffer into Go
// memory and releases it with weaveffi_free_bytes.
func wvCopyBuffer(ptr *C.uint8_t, length C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	out := C.GoBytes(unsafe.Pointer(ptr), C.int(length))
	C.weaveffi_free_bytes(ptr, length)
	return out
}

// wvBorrowBuffer copies a borrowed value buffer into Go memory. The
// producer keeps ownership and frees it after the borrowing call returns.
func wvBorrowBuffer(ptr *C.uint8_t, length C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	return C.GoBytes(unsafe.Pointer(ptr), C.int(length))
}

// Shape: An algebraic shape (sum type with associated data)
//
// Shape is a sealed sum type: exactly one of its variant structs is the
// value at a time.
type Shape interface {
	isShape()
}

// ShapeEmpty: The empty shape (a unit variant)
type ShapeEmpty struct{}

func (ShapeEmpty) isShape() {}

// ShapeCircle: A circle with a radius
type ShapeCircle struct {
	// Radius: Radius in points
	Radius float64
}

func (ShapeCircle) isShape() {}

// ShapeRectangle: An axis-aligned rectangle
type ShapeRectangle struct {
	Width float32
	Height float32
}

func (ShapeRectangle) isShape() {}

// ShapeBounded: An integer-bounded shape (exercises narrow + wide ints)
type ShapeBounded struct {
	Min int16
	Max int16
	Weight uint64
}

func (ShapeBounded) isShape() {}

// ShapeLabeled: A labeled shape with a small count
type ShapeLabeled struct {
	Label string
	Count uint8
}

func (ShapeLabeled) isShape() {}

// wvPackShape appends v to w in the value-buffer wire format.
func wvPackShape(w *wvWriter, v Shape) {
	switch x := v.(type) {
	case ShapeEmpty:
		w.writeI32(0)
	case ShapeCircle:
		w.writeI32(1)
		w.writeF64(x.Radius)
	case ShapeRectangle:
		w.writeI32(2)
		w.writeF32(x.Width)
		w.writeF32(x.Height)
	case ShapeBounded:
		w.writeI32(3)
		w.writeI16(x.Min)
		w.writeI16(x.Max)
		w.writeU64(x.Weight)
	case ShapeLabeled:
		w.writeI32(4)
		w.writeString(x.Label)
		w.writeU8(x.Count)
	default:
		panic("weaveffi: Shape value is not one of its variants")
	}
}

// wvUnpackShape decodes one Shape from r.
func wvUnpackShape(r *wvReader) Shape {
	switch r.readI32() {
	case 0:
		return ShapeEmpty{}
	case 1:
		var x ShapeCircle
		x.Radius = r.readF64()
		return x
	case 2:
		var x ShapeRectangle
		x.Width = r.readF32()
		x.Height = r.readF32()
		return x
	case 3:
		var x ShapeBounded
		x.Min = r.readI16()
		x.Max = r.readI16()
		x.Weight = r.readU64()
		return x
	case 4:
		var x ShapeLabeled
		x.Label = r.readString()
		x.Count = r.readU8()
		return x
	default:
		panic("weaveffi: malformed value buffer: Shape tag out of range")
	}
}

// Channel: A plain C-style enum (no payloads)
type Channel int32

const (
	ChannelRed Channel = 0
	ChannelGreen Channel = 1
	ChannelBlue Channel = 2
)

// Numerics: One field per supported numeric primitive
type Numerics struct {
	A int8
	B int16
	C int32
	D int64
	E uint8
	F uint16
	G uint32
	H uint64
	I float32
	J float64
}

// wvPackNumerics appends v to w in the value-buffer wire format.
func wvPackNumerics(w *wvWriter, v Numerics) {
	w.writeI8(v.A)
	w.writeI16(v.B)
	w.writeI32(v.C)
	w.writeI64(v.D)
	w.writeU8(v.E)
	w.writeU16(v.F)
	w.writeU32(v.G)
	w.writeU64(v.H)
	w.writeF32(v.I)
	w.writeF64(v.J)
}

// wvUnpackNumerics decodes one Numerics from r.
func wvUnpackNumerics(r *wvReader) Numerics {
	var v Numerics
	v.A = r.readI8()
	v.B = r.readI16()
	v.C = r.readI32()
	v.D = r.readI64()
	v.E = r.readU8()
	v.F = r.readU16()
	v.G = r.readU32()
	v.H = r.readU64()
	v.I = r.readF32()
	v.J = r.readF64()
	return v
}

// Describe: Render a shape to a string
func Describe(shape Shape) string {
	wShape := &wvWriter{}
	wvPackShape(wShape, shape)
	var cShapePtr *C.uint8_t
	if len(wShape.buf) > 0 {
		cShapePtr = (*C.uint8_t)(unsafe.Pointer(&wShape.buf[0]))
	}
	var cErr C.weaveffi_error
	result := C.weaveffi_shapes_describe(cShapePtr, C.size_t(len(wShape.buf)), &cErr)
	wvTrap(&cErr)
	goResult := C.GoString(result)
	C.weaveffi_free_string(result)
	return goResult
}

// Scale: Scale a shape by a factor, returning a new shape
func Scale(shape Shape, factor float64) Shape {
	wShape := &wvWriter{}
	wvPackShape(wShape, shape)
	var cShapePtr *C.uint8_t
	if len(wShape.buf) > 0 {
		cShapePtr = (*C.uint8_t)(unsafe.Pointer(&wShape.buf[0]))
	}
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_shapes_scale(cShapePtr, C.size_t(len(wShape.buf)), C.double(factor), &cOutLen, &cErr)
	wvTrap(&cErr)
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Shape
	goResult = wvUnpackShape(rRes)
	rRes.expectEnd()
	return goResult
}

// SumBytes: Sum a list of bytes into a wide integer (numerics smoke)
func SumBytes(values []byte) uint64 {
	var cValuesPtr *C.uint8_t
	cValuesLen := C.size_t(len(values))
	if len(values) > 0 {
		cValuesPtr = (*C.uint8_t)(unsafe.Pointer(&values[0]))
	}
	var cErr C.weaveffi_error
	result := C.weaveffi_shapes_sum_bytes(cValuesPtr, cValuesLen, &cErr)
	wvTrap(&cErr)
	return uint64(result)
}

// MakeNumerics: Build a Numerics struct from every numeric primitive
func MakeNumerics(a int8, b int16, c int32, d int64, e uint8, f uint16, g uint32, h uint64, i float32, j float64) Numerics {
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_shapes_make_numerics(C.int8_t(a), C.int16_t(b), C.int32_t(c), C.int64_t(d), C.uint8_t(e), C.uint16_t(f), C.uint32_t(g), C.uint64_t(h), C.float(i), C.double(j), &cOutLen, &cErr)
	wvTrap(&cErr)
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Numerics
	goResult = wvUnpackNumerics(rRes)
	rRes.expectEnd()
	return goResult
}


// END weaveffi.go
